--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let me style to my will</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -37,10 +37,13 @@
 
         <table>
             <tr id="background">
-                <th>Name</th>
-                <th>Surname</th>
-                <th>Email</th>
-                <th>Profession</th>
+                <thead>
+                    <th>Name</th>
+                    <th>Surname</th>
+                    <th>Email</th>
+                    <th>Profession</th>
+                </thead>
+               
             </tr>
             <tr>
                 <td>Mary</td>
